# tetl

./: .cirrus.yml  .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .remarkrc  .travis.yml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile  Doxyfile.in  LICENSE  Makefile  README.md  REUSE.toml  appveyor.yml  build_doxygen.sh  codecov.yml  library.json  standardese.ini
docs/: Doxyfile.in  (+8 more)
examples/: CMakeLists.txt  Makefile  algorithm.cpp  all_headers.cpp  array.cpp  bitset.cpp  cassert.cpp  chrono.cpp  cmath.cpp  main.cpp  map.cpp  memory.cpp  numeric.cpp  optional.cpp  set.cpp  source_location.cpp  string.cpp  tuple.cpp  type_traits.cpp  utility.cpp  vector.cpp
examples/experimental/: CMakeLists.txt  stm32_freertos.cpp  stm32_rtos.cpp  tinysimd.cpp
examples/mk/: arm_stm32f103.mk  avr_atmega2560.mk  avr_atmega328p.mk  msp430.mk  x86_linux.mk
fuzzing/: .gitignore  CMakeLists.txt  Makefile  fuzzer.cpp  fuzzing.hpp  main.cpp  run.sh
fuzzing/include/: fuzzing.hpp  sorting.hpp
fuzzing/src/: algorithm.adjacent_find.fuzz.cpp  algorithm.binary_search.fuzz.cpp  algorithm.bubble_sort.fuzz.cpp  algorithm.equal.fuzz.cpp  algorithm.equal_range.fuzz.cpp  algorithm.exchange_sort.fuzz.cpp  algorithm.fuzz.cpp  algorithm.gnome_sort.fuzz.cpp  algorithm.insertion_sort.fuzz.cpp  algorithm.is_partitioned.fuzz.cpp  algorithm.is_permutation.fuzz.cpp  algorithm.lexicographical_compare.fuzz.cpp  algorithm.max_element.fuzz.cpp  algorithm.merge_sort.fuzz.cpp  algorithm.min_element.fuzz.cpp  algorithm.minmax_element.fuzz.cpp  algorithm.mismatch.fuzz.cpp  algorithm.nth_element.fuzz.cpp  algorithm.partition.fuzz.cpp  algorithm.quick_sort.fuzz.cpp  algorithm.reverse.fuzz.cpp  algorithm.search.fuzz.cpp  algorithm.set_difference.fuzz.cpp  algorithm.set_intersection.fuzz.cpp  algorithm.set_symmetric_difference.fuzz.cpp  algorithm.set_union.fuzz.cpp  algorithm.shift_left.fuzz.cpp  algorithm.shift_right.fuzz.cpp  bit.bit_ceil.fuzz.cpp  bit.bit_floor.fuzz.cpp  bit.bit_width.fuzz.cpp  bit.byteswap.fuzz.cpp  bit.countl_one.fuzz.cpp  bit.countl_zero.fuzz.cpp  bit.countr_one.fuzz.cpp  bit.countr_zero.fuzz.cpp  bit.has_single_bit.fuzz.cpp  bit.popcount.fuzz.cpp  bitset.fuzz.cpp  cctype.fuzz.cpp  (+31 more)
include/: CMakeLists.txt
include/etl/: algorithm.hpp  array.hpp  bit.hpp  bitset.hpp  cassert.hpp  cctype.hpp  cfloat.hpp  charconv.hpp  chrono.hpp  climits.hpp  cmath.hpp  compare.hpp  complex.hpp  concepts.hpp  contracts.hpp  coroutine.hpp  cstdarg.hpp  cstddef.hpp  cstdint.hpp  cstdio.hpp  cstdlib.hpp  cstring.hpp  ctime.hpp  cwchar.hpp  cwctype.hpp  debugging.hpp  exception.hpp  execution.hpp  expected.hpp  flat_set.hpp  format.hpp  functional.hpp  inplace_vector.hpp  ios.hpp  iterator.hpp  limits.hpp  linalg.hpp  map.hpp  mdarray.hpp  mdspan.hpp  (+29 more)
include/taetl/: array.h  definitions.h  type_traits.h  vector.h
module/: CMakeLists.txt  etl.cpp
module/src/: algorithm.cpp  array.cpp  bit.cpp  bit.inc  bitset.cpp  bitset.inc  cctype.cpp  cfloat.cpp  cfloat.inc  charconv.cpp  chrono.cpp  cmath.cpp  cmath.inc  compare.cpp  complex.cpp  concepts.cpp  cstddef.cpp  cstdint.cpp  cstdlib.cpp  cstring.inc  cwchar.inc  exception.cpp  execution.inc  flat_set.cpp  functional.cpp  inplace_vector.cpp  iterator.cpp  iterator.inc  limits.cpp  limits.inc  linalg.cpp  mdarray.cpp  mdspan.cpp  memory.cpp  memory.inc  numbers.cpp  numeric.cpp  optional.cpp  random.cpp  ranges.cpp  (+17 more)
src/: CMakeLists.txt  etl.cpp
src/inc/: algorithm.inc  array.inc  bit.inc  bitset.inc  cctype.inc  cfloat.inc  charconv.inc  chrono.inc  cmath.inc  compare.inc  complex.inc  concepts.inc  cstddef.inc  cstdint.inc  cstdlib.inc  cstring.inc  cwchar.inc  exception.inc  execution.inc  expected.inc  flat_set.inc  functional.inc  inplace_vector.inc  iterator.inc  limits.inc  linalg.inc  mdarray.inc  mdspan.inc  memory.inc  meta.inc  mpl.inc  mutex.inc  numbers.inc  numeric.inc  optional.inc  random.inc  ranges.inc  ratio.inc  scope.inc  set.inc  (+14 more)
src/taetl/: algorithm.h  algorithm.hpp  array.h  array.hpp  definitions.h  definitions.hpp  etl.cpp  functional.hpp  hardware.h  hardware.hpp  intrinsics.hpp  map.hpp  numeric.h  numeric.hpp  string.h  string.hpp  tuple.hpp  type_traits.h  type_traits.hpp  utility.hpp  vector.h  vector.hpp  version.h  version.hpp
tests/: CMakeLists.txt  assert_handler.cpp  definitions.cpp  helper.hpp  test_algorithm.cpp  test_array.cpp  test_array_constexpr.cpp  test_bit.cpp  test_bitset.cpp  test_byte.cpp  test_cctype.cpp  test_charconv.cpp  test_chrono.cpp  test_cmath.cpp  test_complex.cpp  test_concepts.cpp  test_constexpr_string.cpp  test_cstdarg.cpp  test_cstddef.cpp  test_cstdint.cpp  test_cstdio.cpp  test_cstdlib.cpp  test_cstring.cpp  test_ctime.cpp  test_cwchar.cpp  test_definitions.cpp  test_exception.cpp  test_expected.cpp  test_format.cpp  test_functional.cpp  test_ios.cpp  test_iterator.cpp  test_limits.cpp  test_main.cpp  test_map.cpp  test_memory.cpp  test_mutex.cpp  test_numbers.cpp  test_numeric.cpp  test_optional.cpp  (+19 more)
tests/_strings/: test_conversion.cpp
tests/algorithm/: CMakeLists.txt  all_of.t.cpp  binary_search.t.cpp  copy.t.cpp  count.t.cpp  equal.t.cpp  equal_range.t.cpp  fill.t.cpp  find.t.cpp  for_each.t.cpp  generate.t.cpp  includes.t.cpp  is_permutation.t.cpp  lower_bound.t.cpp  merge.t.cpp  minmax.t.cpp  minmax_element.t.cpp  misc.t.cpp  mismatch.t.cpp  move.t.cpp  partition.t.cpp  remove.t.cpp  replace.t.cpp  reverse.t.cpp  rotate.t.cpp  search.t.cpp  set_difference.t.cpp  set_intersection.t.cpp  set_symmetric_difference.t.cpp  set_union.t.cpp  shift.t.cpp  shift_left.t.cpp  shift_right.t.cpp  sort.t.cpp  stable_partition.t.cpp  swap_ranges.t.cpp  test_algorithm_01.cpp  test_algorithm_02.cpp  test_algorithm_03.cpp  transform.t.cpp  (+2 more)
tests/array/: CMakeLists.txt  array.t.cpp  dynamic_array.t.cpp  uninitialized_array.t.cpp
tests/bit/: CMakeLists.txt  bit_cast.t.cpp  bit_functions.t.cpp  byteswap.t.cpp  flip_bit.t.cpp  popcount.t.cpp  reset_bit.t.cpp  set_bit.t.cpp  test_bit.t.cpp
tests/bitset/: CMakeLists.txt  basic_bitset.t.cpp  bitset.t.cpp
(+2507 files in other folders)
